<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8F8"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridview"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/img"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_4"
            android:onClick="tic"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_2"
            android:onClick="tic"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_3"
            android:onClick="tic"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_10"
            android:onClick="tic"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_9"
            android:onClick="tic"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_0"
            android:onClick="tic"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="1"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_8"
            android:onClick="tic"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_7"
            android:onClick="tic"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo_6"
            android:onClick="tic"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2"
            tools:ignore="ImageContrastCheck" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="289dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="616dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="56dp"
        android:onClick="playagain"
        android:text="@string/play_again"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>